[package]
name = "druid-widget-nursery"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
async = ["tokio/rt", "futures", "flume"]
hot-reload = ["libloading", "notify5", "rand"]

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "232314d5d9ea455c04c384916e4b72a1f85998ec" # update this when upgrading to newer druid
# path = "../../projects/druid/druid"
features = ["im"]

[dependencies]
log = "0.4.11"

# theme loader
# TODO: update this to 5.0
notify = { version = "4.0.12", optional = true }

# async
tokio = { version = "1.0", features = ["rt", "time"], optional = true }
futures = { version = "0.3", optional = true }
flume = { version = "0.10", optional = true }

# hot reload
notify5 = { version = "5.0.0-pre.11", optional = true, package = "notify" }
libloading = { version = "0.6.6", optional = true }
rand = { version = "0.8.1", optional = true }
tracing = { version = "0.1.22" }

[[example]]
name = "async"
required-features = ["async", "tokio/time"]

[[example]]
name = "animator"

[[example]]
name = "splits"
[workspace]
members = ["examples/hot-reload"]
