[package]
name = "druid-widget-nursery"
description = "Extra widgets for `druid` that are not yet ready for inclusion in Druid proper"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
async = ["tokio/rt", "futures", "flume"]
derive = ["druid-widget-nursery-derive"]
hot-reload = ["libloading", "notify5", "rand"]
material-icons = ["druid-material-icons"]

[dependencies]
# TODO convert to using tracing
log = "0.4.11"

druid = { version = "0.8", features = ["im"] }

# theme loader
# TODO: update this to 5.0
notify = { version = "4.0.12", optional = true }

# async
tokio = { version = "1.0", features = ["rt", "time"], optional = true }
futures = { version = "0.3", optional = true }
flume = { version = "0.10", optional = true }

# derive
druid-widget-nursery-derive = { version = "=0.1.0", path = "druid-widget-nursery-derive", optional = true }

# hot reload
notify5 = { version = "5.0.0-pre.11", optional = true, package = "notify" }
libloading = { version = "0.6.6", optional = true }
rand = { version = "0.8.1", optional = true }
tracing = { version = "0.1.22" }
druid-material-icons = { version = "0.2.0", optional = true }

[[example]]
name = "async"
required-features = [
    "async",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio/time",
]

[[example]]
name = "animator"

[[example]]
name = "animation-curves"

[[example]]
name = "prisms"
required-features = ["derive"]

[[example]]
name = "splits"

[[example]]
name = "material_icons"
required-features = ["material-icons"]

[workspace]
members = ["druid-widget-nursery-derive", "examples/hot-reload"]

[dev-dependencies]
clap = { version = "3.2.19", features = ["derive"] }
qu = "0.5.1"
serde_json = "1.0.71"
