[package]
name = "druid-widget-nursery-derive"
description = "A proc-macro helper library for `druid-widget-nursery`"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = "1.0.85"
syn2 = { package = "syn", version = "2" }
