[package]
name = "hot-reload"
version = "0.1.0"
authors = ["Manmeet Maan <manmeetmann2003@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
druid-widget-nursery = { path = "../..", features = ["hot-reload"] }

[dependencies.druid]
git = "https://github.com/linebender/druid"
